<resources>
    <string name="app_name">My Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Моя фильмотека</string>
    <string name="nav_header_subtitle">фильмы, подборки, отзывы</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="menu_croupItem_temporary_titles">Временно</string>
    <string name="menu_home">Главная</string>
    <string name="menu_favorites">Предпочтения</string>
    <string name="menu_ratings">Рейтинги</string>
    <string name="menu_croupItem_more_title">Дополнительно</string>
    <string name="menu_app_info_item_title">О приложении</string>
    <string name="menu_search_item_title">Поиск фильмов</string>
    <string name="menu_moreDetail_item_title">Детально о фильме</string>
    <string name="default_date_null">0000</string>
    <string name="default_test_string_line_for_more_detailed">Этoт фрагмент
 сообщает детальную информацию о фильме.
 реализовать добавление собственного рейтинга и комментария, может еще что…</string>
    <string name="default_test_string_line_for_about">Этот фрагмент \n сообщает информацию о приложении. \n Здесь планируется разместить картинку:\n" +
                    "номер версии\n" +
                    "ссылку на адрес администратора\n" +
                    "фио автора\n" +
                    "инструкцию как с приложением работать, может еще что…</string>
    <string name="default_test_string_line_for_settings">Этo фрагмент \n настроек программы. \n" +
                "реализовать дневной и ночной режим, количество рубрик в левом меню и содержимое главного фрагмента.</string>
    <string name="genre_stub">Какойто жанр, Драма, Задрама</string>
    <string name="default_plug_download">Загрузка…</string>
    <string name="default_text_action_for_star">Пользователь нажал на звездочку к фильму %1$s, идентификатор фильма %2$d</string>
    <string name="default_text_action_for_heart">Пользователь нажал на сердечко к фильму %1$s, идентификатор фильма %2$d</string>
    <string name="base_url_about">https://souos.ru</string>
    <string name="movie_details_fragment">Информация о фильме</string>
    <string name="search_fragment_label_result">Результаты поиска…</string>
    <string name="default_text_movie_details_name_movie">Региональное наименование фильма</string>
    <string name="default_text_movie_details_original_name_movie">Оригинальное наименование и (ГГГГ)</string>
    <string name="default_text_movie_details_duration_movie">123 мин.</string>
    <string name="default_text_movie_details_rating_movie">8,5 (7183)</string>
    <string name="default_text_movie_details_budget_movie">Бюджет: 1 234 567 890 $</string>
    <string name="default_text_movie_details_revenue_movie">Сборы: 1 234 567 890 $</string>
    <string name="default_text_movie_details_release_data_movie">Дата релиза: (2018–12–06)</string>
    <string name="textView_default_basic_title">Пустое наименование рубрики</string>
    <string name="textView_default_name_movie_for_item_holder">Воспоминание об убийстве</string>
    <string name="textView_default_date_release_for_item_holder">2020</string>
    <string name="textView_default_rating_tmdb_for_item_holder">6,9</string>
    <string name="ImageView_contentDescription_add_to_favorites_question">Добавить в избранное?</string>
    <string name="ImageView_contentDescription_give_a_rating_question">Оценить фильм?</string>
    <string name="ImageView_contentDescription_go_to_details_movie_question">Посмотреть подробное описание фильма и дополнительную информацию?</string>
    <!-- Preference Titles -->
    <string name="basic_settings_header">Основные настройки</string>
    <string name="selection_settings_header">Подборки и результаты поиска</string>

    <!-- Messages Preferences -->
    <string name="tmdbApiKeyV3_title">Ваш (V3)API key</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="selection_settings_adult_added_title">Исключить фильмы \"Для взрослых\"</string>
    <string name="enable_custom_adult_validation_title">Дополнительная проверка</string>
    <string name="selection_settings_custom_adult_validation_summary_on">Из результатов выборки будут Автоматически исключены фильмы, которые Вы САМОСТОЯТЕЛЬНО отнесли в категорию \"Для взрослых\"</string>
    <string name="selection_settings_custom_adult_validation_summary_off">Определенные вами критерии отношения фильмов к группе \"Для взрослых\" не будут учитываться.</string>
    <string name="selection_settings_adult_added_summary_on">Из подборок будут исключены фильмы, отнесенные сервисом в категорию \"Для ВЗРОСЛЫХ\"</string>
    <string name="selection_settings_adult_added_summary_off">В подборки будут включены фильмы, отнесенные сервисом в категорию \"Для ВЗРОСЛЫХ\"</string>
    <string name="selection_settings_exclude_unwanted_content_title">Исключать нежедательный контент</string>
    <string name="selection_exclude_unwanted_content_summary_on">Из результатов выборки будут Автоматически исключены фильмы, которые Вы САМОСТОЯТЕЛЬНО отнесли в категорию \"Нежелательный контент\"</string>
    <string name="selection_exclude_unwanted_content_summary_off">Ваши предпочтения и пометки \"Нежелательный контент\" при выборке не будут учитываться</string>
    <string name="selection_settings_exclude_movies_without_poster_title">Исключить фильмы без постеров</string>
    <string name="selection_exclude_movies_without_poster_summary_on">Из подборок будут исключены фильмы без постеров</string>
    <string name="selection_exclude_movies_without_poster_summary_off">В подборках могут присутвовать фильмы без постеров</string>
    <string name="selection_settings_exclude_movies_without_summary_title">Исключать фильмы без описания</string>
    <string name="selection_exclude_movies_without_summary_summary_off">В подборках могут присутствовать фильмы с отсутствующим описанием</string>
    <string name="selection_exclude_movies_without_summary_summary_on">Из подборок будут исключены фильмы без описаний</string>
    <string name="selection_settings_exclude_movies_without_release_data_title">Исключать фильмы без даты релиза</string>
    <string name="selection_exclude_movies_without_release_data_summary_off">В подборках могут присутствовать фильмы с отсутствующей датой релиза</string>
    <string name="selection_exclude_movies_without_release_data_summary_on">Из подборок будут исключены фильмы без даты релиза</string>
    <string name="action_unwanted_content_list_title">Нежелательный контент</string>
    <string name="action_marked_as_adult_by_me_list_title">Список \"Для взрослых\" (доп.)</string>
    <string name="tmdbUserName_title">Имя пользователя (TMDB)</string>
    <string name="settings_fragment_label">Настройки</string>
    <string name="marked_Aaa_List_Label">Контент "Для взрослых" (дополнительно)</string>
    <string name="unwanted_list_label">Нежелательный контент</string>
    <string name="menu_contacts_list_item_title">Контакты</string>
    <string name="search_title">Поиск фильмов</string>
    <string name="search_history_title">История поиска</string>
    <string name="ImageView_contentDescription_go_to_details_contact">Посмотреть детальную информацию о контакте</string>
    <string name="textView_default_name_movie_for_contact_item_holder">Отображаемое наименование контакта</string>
    <string name="default_text_for_contact_description">Дополнительное описание контакта</string>
    <string name="contact_group_stub">группа контакта</string>
    <string name="ImageView_contentDescription_send_message">Отправить сообщение</string>
    <string name="history_search_fragment_label">История поисковых запросов</string>
    <string name="contacts_list_fragment_label">Контакты</string>
    <string name="menu_location_item_title">Геолокация</string>
    <string name="requestPermissionReadContactsText">Мне нужно это разрешение. край как…</string>
    <string name="requestPermissionActionText">Разрешить</string>
    <string name="requestPermissionReadContactsSadlyText">Очень жаль, но данной функцией вы не сможете воспользоваться. В настройках нужно дать разрешение на доступ к контактам</string>
    <string name="testSnackebarText">Replace with your own action</string>
    <string name="testSnackebarActionText">Action</string>
    <string name="requestPermissionLocationText">для работы этого модуля, край как нужно разрешение на доступ к геопозиции…</string>
    <string name="requestPermissionLocationSadlyText">Очень жаль. Но вы не можете воспользоваться данной функцией пока не разрешите приложению использовать ваше местоположение (в настройках)</string>
    <string name="locationHeaderText">Координаты объекта</string>
    <string name="locationValueText">координаты</string>
    <string name="default_text_location_coordinates">Широта %1$s и долгота %2$s</string>
    <string name="defaultLocationCoordinatesText">Координаты пользователя</string>
    <string name="defaultLocationAddressText">Адрес (по координатам)</string>
    <string name="menu_map_item_title">Карта</string>
</resources>