<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/basic_settings_header">

        <EditTextPreference
            app:key="tmdbApiKeyV3"
            app:title="@string/TmdbApiKeyV3_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/selection_settings_header">

        <SwitchPreferenceCompat
            app:key="adultAdded"
            app:summaryOff="@string/selection_settings_adult_added_summary_off"
            app:summaryOn="@string/selection_settings_adult_added_summary_on"
            app:title="@string/selection_settings_adult_added_title" />

        <SwitchPreferenceCompat
            app:dependency="adultAdded"
            app:key="customAdultValidation"
            app:summaryOff="@string/selection_settings_custom_adult_validation_summary_off"
            app:summaryOn="@string/selection_settings_custom_adult_validation_summary_on"
            app:title="@string/enable_custom_adult_validation_title" />

        <SwitchPreferenceCompat
            app:key="excludeUnwantedContent"
            app:summaryOff="@string/selection_exclude_unwanted_content_summary_off"
            app:summaryOn="@string/selection_exclude_unwanted_content_summary_on"
            app:title="@string/selection_settings_exclude_unwanted_content_title" />

        <SwitchPreferenceCompat
            app:key="excludeMoviesWithoutPoster"
            app:summaryOff="@string/selection_exclude_movies_without_poster_summary_off"
            app:summaryOn="@string/selection_exclude_movies_without_poster_summary_on"
            app:title="@string/selection_settings_exclude_movies_without_poster_title" />

        <SwitchPreferenceCompat
            app:key="excludeMoviesWithoutSummary"
            app:summaryOff="@string/selection_exclude_movies_without_summary_summary_off"
            app:summaryOn="@string/selection_exclude_movies_without_summary_summary_on"
            app:title="@string/selection_settings_exclude_movies_without_summary_title" />

        <SwitchPreferenceCompat
            app:key="excludeMoviesWithoutReleaseData"
            app:summaryOff="@string/selection_exclude_movies_without_release_data_summary_off"
            app:summaryOn="@string/selection_exclude_movies_without_release_data_summary_on"
            app:title="@string/selection_settings_exclude_movies_without_release_data_title" />

    </PreferenceCategory>

</PreferenceScreen>