<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_moreDetailedFragment"
            app:destination="@id/moreDetailedFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorites"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favorites_to_moreDetailedFragment"
            app:destination="@id/moreDetailedFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_ratings"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.ratings.RatingsFragment"
        android:label="@string/menu_ratings"
        tools:layout="@layout/fragment_ratings" >
        <action
            android:id="@+id/action_nav_ratings_to_moreDetailedFragment"
            app:destination="@id/moreDetailedFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.about.AboutFragment"
        android:label="@string/menu_app_info_item_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/moreDetailedFragment"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.moredetailed.MoreDetailedFragment"
        android:label="@string/more_detailed_fragment"
        tools:layout="@layout/fragment_more_detailed" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.search.SearchFragment"
        android:label="@string/search_fragment_label_result"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_moreDetailedFragment"
            app:destination="@id/moreDetailedFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ru.geekbrains.androidonkotlin.hw.mymovie.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>