<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_twotone_search_24"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_search_history"
        android:icon="@drawable/ic_baseline_manage_search_24"
        android:title="Search_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unwanted_content_list"
        android:orderInCategory="99"
        android:title="@string/action_unwanted_content_list_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_marked_as_adult_by_me_list"
        android:orderInCategory="99"
        android:title="@string/action_marked_as_adult_by_me_list_title"
        app:showAsAction="never" />
</menu>