<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    android:elevation="2dp"
    android:padding="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_poster"
            android:layout_width="67dp"
            android:layout_height="100dp"
            android:contentDescription="@string/ImageView_contentDescription_go_to_details_movie_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/zgl" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textView_default_name_movie_for_item_holder"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewReleaseData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/default_text_movie_details_original_name_movie"
            app:layout_constraintStart_toEndOf="@id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@id/textViewName" />

        <TextView
            android:id="@+id/textViewGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/genre_stub"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/imageView_poster"
            app:layout_constraintTop_toBottomOf="@id/textViewReleaseData" />

        <ImageView
            android:id="@+id/imageViewRating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/ImageView_contentDescription_give_a_rating_question"
            app:layout_constraintBottom_toBottomOf="@+id/textViewRating"
            app:layout_constraintStart_toEndOf="@id/imageView_poster"
            app:layout_constraintTop_toTopOf="@+id/textViewRating"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_default_rating_tmdb_for_item_holder"
            app:layout_constraintStart_toEndOf="@id/imageViewRating"
            app:layout_constraintTop_toBottomOf="@+id/textViewGenres"
            tools:layout_editor_absoluteX="99dp" />

        <ImageView
            android:id="@+id/imageView_ingBtn_addToFavorites"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/ImageView_contentDescription_add_to_favorites_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twotone_favorite_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>