<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    android:elevation="2dp"
    android:padding="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_avatar"
            android:layout_width="67dp"
            android:layout_height="100dp"
            android:contentDescription="@string/ImageView_contentDescription_go_to_details_contact"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/zgl" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/textView_default_name_movie_for_contact_item_holder"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContactDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/default_text_for_contact_description"
            app:layout_constraintStart_toEndOf="@id/imageView_avatar"
            app:layout_constraintTop_toBottomOf="@id/textViewName" />

        <TextView
            android:id="@+id/textViewContactGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/contact_group_stub"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/imageView_avatar"
            app:layout_constraintTop_toBottomOf="@id/textViewContactDescription" />

        <ImageView
            android:id="@+id/imageView_imgBtn_send_message"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/ImageView_contentDescription_send_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twotone_send_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>